--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <div id="rssFeed"> </div>
     
     <p id="info"><small>More Information</small></p><br> 
-
+    
+    <form id="contactForm">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name"required autocomplete="on" value="Your Name"><br><br>
+        <label for="email">Email</label>
+        <input type="email" id="email"name="email"required><br><br>
+        <label for="message">Message</label>
+        <textarea id="message"name="message"rows="4"cols="70"required></textarea><br><br>
+        <button type="submit">Send Email</button>
+    </form>
 
     <button id="myButton">Dark/Light Mode</button> 
     <button id="myBtn">Check The Latest News</button>
